--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <div class="hero">
     </div>
-    <p id="caption" class="p-3"> What happened to your Phone's Clock?</p>
+    <h5 id="caption" class="p-3"> What happened to your Phone's Clock?</h5>
     <div class="p-5">
         <div class="clock">
             <div class="clock__second"></div>
