--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             "At this point, just ask a sundial.",
             "You really woke up today and chose ‘extra steps’ huh?",
             "Efficiency left the chat when you scanned this QR code.",
+            "Cogratulations! You just found the problem to the solution.",
             "Life is already hard… and here you are making it harder.",
             "This is why aliens don’t visit us.",
             "There’s ‘work smart’, there’s ‘work hard’… and then there’s *this*.",
